Remove overflow: scroll; FISHING-276 #resolve #time 15m

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -228,7 +228,7 @@ p {
 }
 
 .bassEventEnterBackground {
-    height: 530px;
+    min-height: 530px;
     width: 1400px;
 }
 
@@ -501,17 +501,15 @@ a#dotPlayPause {
 
 .anglersListContainer, .aboutTextContainer, .leaderListContainer, .newsListContainer {
     box-shadow: 0px 0px 20px black;
-    overflow: scroll;
 }
 
 .newsBotCont, .invitationText {
-    height: 830px;
+    min-height: 830px;
     background-color: #d7c8b9;
 }
 
 .aboutTextContainer {
     background-color: #d7c8b9;
-    overflow: scroll;
 }
 
 .anglersTopBar, .leaderTopBar, .newsTopBar {
@@ -544,7 +542,7 @@ a#dotPlayPause {
 
 .anglersBotCont, .leaderBotCont {
     clear: both;
-    height: 765px;
+    min-height: 765px;
     padding: 32px;
     background-color: #cccece;
     color: #333;
